--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body{
   padding: 20px;
   padding-left: 100px;
   padding-right: 100px;
+  margin: 0;
 }
 
 h1{
@@ -25,5 +26,10 @@ h1{
   body {
     padding-left: 50px;
     padding-right: 50px;
+  }
+  h1{
+    font-size: 2rem;
+    margin: 20px;
+    margin-bottom: 50px;
   }
 }
