--- a/src/index.css
+++ b/src/index.css
@@ -17,19 +17,17 @@ h1{
   font-family: Aquire;
   font-size: 3rem;
   text-align: center;
-  margin: 40px;
+  margin-bottom: 50px;
   color: #eda3ff;
   text-shadow: 1px 1px 0px#14140b, 2px 2px 7px#c100f1;
 }
 
 @media only screen and (max-width: 768px) {
   body {
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 3vw;
+    padding-right: 3vw;
   }
   h1{
     font-size: 2rem;
-    margin: 20px;
-    margin-bottom: 50px;
   }
 }
